[tool.poetry]
name = "dagster-learnings"
version = "0.1.0"
description = ""
authors = ["Justin Beredo <justindberedo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
